--- a/projects/eqpad.html
+++ b/projects/eqpad.html
@@ -64,6 +64,10 @@
             padding: 8px 0;
         }
 
+        strong {
+            font-weight: 510;
+        }
+
         ul {
             list-style: none;
             padding: 6px 0 6px 10px;
@@ -73,6 +77,16 @@
         }
         ul > li::before {
             content: '- ';
+        }
+
+        table {
+            border-collapse: collapse;
+        }
+        tr {
+            border-bottom: 1px solid black;
+        }
+        td, th {
+            padding: 10px;
         }
 
         pre {
@@ -103,6 +117,13 @@
             width: 15%;
             float: right;
             padding-bottom: 30px;
+        }
+
+        /*--- documentation generation ---*/
+        .doc-member {
+            padding: 5px 0 5px 20px;
+            margin: 30px 0 0 0;
+            border-left: 2px solid #888888;
         }
 
         /*--- navigation bar ---*/
@@ -257,6 +278,7 @@
 
         <aside class="infobar">
             
+
         </aside>
     </div>
 
