--- a/resources/index.html
+++ b/resources/index.html
@@ -234,7 +234,14 @@
                 Articles
             </a>
             <div class="expand-list">
-                <a href=".">No Articles Yet</a>
+                <a href="/articles/installing-clangpp">Installing Clang++ on Windows (without VS!)</a>
+                <a href="/articles/javascript-puzzles">JavaScript Puzzles</a>
+                <span class="expand side">
+                    <a href="#">Git</a>
+                    <div class="expand-list">
+                        <a href="/articles/git/technical">Technical</a>
+                    </div>
+                </span>
             </div>
         </span>
 
@@ -262,7 +269,7 @@
             <h1 id="resources"><a href="#resources">Resources</a></h1>
 <hr />
 
-<p>No resources yet.</p>
+<p></p>
 
 
         </main>
